# cplxfnc

./: .travis.yml  LICENSE  README.md  README.rst  example.py  setup.py
cplxfnc/: __init__.py  cplxfnc_cyth.pyx
cplxfnc_clib/: config.h.in  configure  configure.ac  cplxfnc.cpp  cplxfnc.hpp  cplxfnc_check.cpp  makefile  makefile.in
tests/: test_cplxfnc.py
